Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Food Rescue Boxr</title>
+  <title>Food Rescue Box</title>
   <style>
     :root{--bg:#e9a76f;--card:#ffffff;--accent:#6ca66e;--muted:#6b7280}
     *{box-sizing:border-box}
@@ -246,3 +246,4 @@
   </script>
 </body>
 </html>
+
